methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:3: error: not found: value fasle
  var trail = fasle
              ^