methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  var trail = fasle
  if (! isFacingWall() ) {
    forward()
    if (getGroundColor() == "Color.green") {
      trail = true
    }
    backward()
  }
  return trail
}        
